--- a/popup.html
+++ b/popup.html
@@ -1,125 +1,149 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-	<title>Huruf</title>
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<style>
-		html, body{
-			width: 200px;
-			background-color: #efefef;
-			color: #222;
-			margin: 0;
-			padding: 0;
-			font-family: "Helvetica Neue";
-		}
-		#size, #height{
-			width: 70%;
-			text-align: center;
-		}
-		header {
-			background-color: #3a7295;
-			color: #efefef;
-			padding: 20px;
-			text-align: center;
-			font-family: "Droid Arabic Naskh";
-			font-size: 2.7em;
-		}
-		div[role="main"]{
-			margin: 0,auto;
-			padding: 5px;
-			text-align: center;
-		}
-		footer {
-			color: #999;
-			text-align: center;
-			font-size: .8em;
-		}
-		hr {
-			border: none;
-			border-bottom: solid 1px #aaa;
-		}
-		a {
-			color: #3a7295;
-			text-decoration: none;
-		}
-		a:hover, a:active {
-			text-decoration: underline;
-		}
-		td {
-			font-weight: 300;
-		}
-		input[type=range]{
-			-webkit-appearance: none;
-			margin-bottom: 10px;
-		}
+    <meta charset="UTF-8" />
+    <title>Huruf</title>
+    <style>
+      html,
+      body {
+        width: 220px;
+        background-color: #efefef;
+        color: #222;
+        margin: 0;
+        padding: 0;
+        font-family: "Helvetica Neue", Arial, sans-serif;
+      }
 
-		input[type=range]::-webkit-slider-runnable-track {
-			width: 300px;
-			height: 5px;
-			background: #ddd;
-			border: none;
-			border-radius: 3px;
-		}
+      #size,
+      #height {
+        width: 80%;
+      }
 
-		input[type=range]::-webkit-slider-thumb {
-			-webkit-appearance: none;
-			border: none;
-			height: 16px;
-			width: 16px;
-			border-radius: 50%;
-			background: #999;
-			margin-top: -6px;
-		}
+      header {
+        background-color: #3a7295;
+        color: #efefef;
+        padding: 16px;
+        text-align: center;
+        font-family: "Droid Arabic Naskh", sans-serif;
+        font-size: 2.4em;
+      }
 
-		input[type=range]:focus {
-			outline: none;
-		}
-		table {
-			border: none;
-			width: 80%;
-			margin: 12px auto;
-			border-bottom: solid 1px #ccc;
-		}
-		.label {
-			text-align: left;
-		}
-		.value {
-			text-align: right;
-		}
-	</style>
-	</head>
+      div[role="main"] {
+        margin: 0 auto;
+        padding: 12px;
+        text-align: center;
+      }
 
-	<body>
-		<header>
-			<bdi dir="rtl" lang="ar">حروف</bdi>
-		</header>
+      footer {
+        color: #666;
+        text-align: center;
+        font-size: 0.8em;
+        margin-bottom: 12px;
+      }
 
-		<div role="main">
-			<table>
-				<tr>
-					<td class="label">Font Size:</td>
-					<td class="value" id="sizeValue"></td>
-				</tr>
-			</table>
-			<input type="range" name="size" min="100" max="150" id="size"/>
+      a {
+        color: #3a7295;
+        text-decoration: none;
+      }
 
+      a:hover,
+      a:active {
+        text-decoration: underline;
+      }
 
-			<br>
-			<br>
+      td {
+        font-weight: 300;
+      }
 
-			<table>
-				<tr>
-					<td class="label">Line Height:</td>
-					<td class="value" id="heightValue"></td>
-				</tr>
-			</table>
-			<input type="range" name="height" min="100" max="150" id="height"/>
-			<br>
-		</div>
-		<!-- <hr /> -->
+      input[type="range"] {
+        appearance: none;
+        -webkit-appearance: none;
+        height: 18px;
+        margin: 0 0 16px;
+      }
 
-		<footer>
-			<p>Made with &#60;3 by <a target="_blank" href="https://github.com/jopetty">Jackson Petty</a></p>
-		</footer>
-		<script src="options.js"></script>
-	</body>
+      input[type="range"]::-webkit-slider-runnable-track {
+        width: 100%;
+        height: 6px;
+        background: #d0d7dd;
+        border: none;
+        border-radius: 3px;
+      }
+
+      input[type="range"]::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        height: 18px;
+        width: 18px;
+        border-radius: 50%;
+        background: #3a7295;
+        margin-top: -6px;
+      }
+
+      input[type="range"]:focus {
+        outline: none;
+      }
+
+      table {
+        border: none;
+        width: 90%;
+        margin: 0 auto 12px;
+        border-bottom: 1px solid #ccc;
+      }
+
+      .label {
+        text-align: left;
+      }
+
+      .value {
+        text-align: right;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <bdi dir="rtl" lang="ar">حروف</bdi>
+    </header>
+    <div role="main">
+      <table>
+        <tr>
+          <td class="label">Font Size</td>
+          <td class="value" id="sizeValue"></td>
+        </tr>
+      </table>
+      <input
+        type="range"
+        name="size"
+        min="100"
+        max="160"
+        id="size"
+        aria-label="Font size"
+      />
+      <table>
+        <tr>
+          <td class="label">Line Height</td>
+          <td class="value" id="heightValue"></td>
+        </tr>
+      </table>
+      <input
+        type="range"
+        name="height"
+        min="100"
+        max="200"
+        id="height"
+        aria-label="Line height"
+      />
+    </div>
+    <footer>
+      <p>
+        Made with &#60;3 by
+        <a
+          target="_blank"
+          href="https://github.com/jopetty"
+          rel="noopener noreferrer"
+          >Jackson Petty</a
+        >
+      </p>
+    </footer>
+    <script src="options.js"></script>
+  </body>
 </html>
